Add project management suite and launcher route

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <small>Live coordination dashboard for shared operational updates.</small>
         </button>
 
-        <button class="app-badge" type="button" disabled>
-          <span class="app-kicker">Coming Soon</span>
+        <a class="app-badge app-badge-live app-badge-live-alt" href="/project-management.html">
+          <span class="app-kicker">Live</span>
           <strong>Project Management</strong>
           <small>Cross-project tracking with milestones, blockers, and ownership.</small>
-        </button>
+        </a>
       </section>
     </main>
   </body>
