Add Business Finance OS badge to launcher

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
           <small>Open the active onboarding + delivery workflow app.</small>
         </a>
 
+        <a
+          class="app-badge app-badge-live app-badge-finance"
+          href="https://private-business-finance-os.vercel.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="app-kicker">External</span>
+          <strong>Business Finance OS</strong>
+          <small>Open the finance operations app in a new tab.</small>
+        </a>
+
         <button class="app-badge" type="button" disabled>
           <span class="app-kicker">Coming Soon</span>
           <strong>Sprints</strong>
