Add Sprints app with two-week planning and retro workflow

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           <small>Cross-project tracking with milestones, blockers, and ownership.</small>
         </a>
 
-        <button class="app-badge" type="button" disabled>
-          <span class="app-kicker">Coming Soon</span>
+        <a class="app-badge app-badge-live" href="/sprints.html">
+          <span class="app-kicker">Live</span>
           <strong>Sprints</strong>
-          <small>Planning board for sprint cycles and workload pacing.</small>
-        </button>
+          <small>Two-week sprint planning, owner goals, and retro visibility.</small>
+        </a>
 
         <button class="app-badge" type="button" disabled>
           <span class="app-kicker">Coming Soon</span>
