--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
           <strong>Business Finance OS</strong>
           <small>Open the finance operations app in a new tab.</small>
         </a>
+
+        <a class="app-badge app-badge-live" href="https://internal.awe2m8.ai/login" target="_blank" rel="noopener noreferrer">
+          <span class="app-kicker">External</span>
+          <strong>Internal Ops Portal</strong>
+          <small>Open internal operations tools in a new tab.</small>
+        </a>
       </section>
     </main>
   </body>
