--- a/onboarding.html
+++ b/onboarding.html
@@ -116,25 +116,38 @@
       </section>
 
       <section class="panel sync-panel">
-        <h2>Team Sync</h2>
-        <div class="sync-grid">
-          <label>
-            API URL
-            <input id="apiUrlInput" type="url" placeholder="https://your-api.onrender.com" />
-          </label>
-          <label>
-            Workspace Key
-            <input id="workspaceKeyInput" type="text" placeholder="acme-onboarding" />
-          </label>
-          <button id="saveSyncBtn" type="button" class="ghost">Save Connection</button>
-          <button id="pullSharedBtn" type="button">Pull Shared Data</button>
-          <button id="pushSharedBtn" type="button" class="ghost">Push Local Data</button>
-          <label class="inline-toggle">
-            <input id="autoSyncCheckbox" type="checkbox" />
-            Auto sync (push on changes + pull every 15s)
-          </label>
+        <div class="panel-collapse-head">
+          <h2>Team Sync API</h2>
+          <button
+            id="teamSyncToggleBtn"
+            class="panel-toggle-btn"
+            type="button"
+            aria-expanded="true"
+            aria-controls="teamSyncContent"
+          >
+            <span class="panel-toggle-icon">▾</span>
+          </button>
         </div>
-        <p id="syncStatus" class="sync-status">Local only. Set API URL and workspace key to share data.</p>
+        <div id="teamSyncContent" class="collapsible-content">
+          <div class="sync-grid">
+            <label>
+              API URL
+              <input id="apiUrlInput" type="url" placeholder="https://your-api.onrender.com" />
+            </label>
+            <label>
+              Workspace Key
+              <input id="workspaceKeyInput" type="text" placeholder="acme-onboarding" />
+            </label>
+            <button id="saveSyncBtn" type="button" class="ghost">Save Connection</button>
+            <button id="pullSharedBtn" type="button">Pull Shared Data</button>
+            <button id="pushSharedBtn" type="button" class="ghost">Push Local Data</button>
+            <label class="inline-toggle">
+              <input id="autoSyncCheckbox" type="checkbox" />
+              Auto sync (push on changes + pull every 15s)
+            </label>
+          </div>
+          <p id="syncStatus" class="sync-status">Local only. Set API URL and workspace key to share data.</p>
+        </div>
       </section>
 
       <section class="panel filters-panel">
