--- a/project-management.html
+++ b/project-management.html
@@ -23,88 +23,119 @@
     </header>
 
     <main class="pm-shell">
-      <section class="pm-panel pm-intake-panel">
-        <h2>Create Project</h2>
-        <form id="projectForm" class="pm-form">
-          <label>
-            Project Name
-            <input name="name" type="text" required placeholder="Website Revamp Q2" />
-          </label>
-          <label>
-            Client
-            <input name="client" type="text" placeholder="Northline Studio" />
-          </label>
-          <label>
-            Owner
-            <input name="owner" type="text" required placeholder="Jesse" />
-          </label>
-          <label>
-            Priority
-            <select name="priority">
-              <option value="medium">Medium</option>
-              <option value="low">Low</option>
-              <option value="high">High</option>
-              <option value="critical">Critical</option>
-            </select>
-          </label>
-          <label>
-            Due Date
-            <input name="dueDate" type="date" />
-          </label>
-          <label>
-            Start Stage
-            <select name="stageId">
-              <option value="backlog">Backlog</option>
-              <option value="planning">Planning</option>
-              <option value="in-progress">In Progress</option>
-              <option value="review">Review</option>
-              <option value="completed">Completed</option>
-            </select>
-          </label>
-          <label class="pm-form-span-2">
-            Notes
-            <textarea name="description" placeholder="Scope summary, dependencies, and key risks."></textarea>
-          </label>
-          <div class="pm-form-actions pm-form-span-2">
-            <button type="submit">Create Project</button>
-            <button id="seedProjectsBtn" type="button" class="pm-ghost">Load Demo Projects</button>
-            <button id="clearProjectsBtn" type="button" class="pm-danger">Clear All Projects</button>
-          </div>
-        </form>
-      </section>
+      <section class="pm-panel pm-top-panel">
+        <div class="pm-panel-collapse-head">
+          <h2>Project Intake and Snapshot</h2>
+          <button
+            id="pmTopToggleBtn"
+            class="pm-panel-toggle-btn"
+            type="button"
+            aria-expanded="true"
+            aria-controls="pmTopContent"
+          >
+            <span class="pm-panel-toggle-icon">▾</span>
+          </button>
+        </div>
+        <div id="pmTopContent" class="pm-collapsible-content">
+          <div class="pm-top-grid">
+            <section class="pm-subpanel">
+              <h3>Create Project</h3>
+              <form id="projectForm" class="pm-form">
+                <label>
+                  Project Name
+                  <input name="name" type="text" required placeholder="Website Revamp Q2" />
+                </label>
+                <label>
+                  Client
+                  <input name="client" type="text" placeholder="Northline Studio" />
+                </label>
+                <label>
+                  Owner
+                  <input name="owner" type="text" required placeholder="Jesse" />
+                </label>
+                <label>
+                  Priority
+                  <select name="priority">
+                    <option value="medium">Medium</option>
+                    <option value="low">Low</option>
+                    <option value="high">High</option>
+                    <option value="critical">Critical</option>
+                  </select>
+                </label>
+                <label>
+                  Due Date
+                  <input name="dueDate" type="date" />
+                </label>
+                <label>
+                  Start Stage
+                  <select name="stageId">
+                    <option value="backlog">Backlog</option>
+                    <option value="planning">Planning</option>
+                    <option value="in-progress">In Progress</option>
+                    <option value="review">Review</option>
+                    <option value="completed">Completed</option>
+                  </select>
+                </label>
+                <label class="pm-form-span-2">
+                  Notes
+                  <textarea name="description" placeholder="Scope summary, dependencies, and key risks."></textarea>
+                </label>
+                <div class="pm-form-actions pm-form-span-2">
+                  <button type="submit">Create Project</button>
+                  <button id="seedProjectsBtn" type="button" class="pm-ghost">Load Demo Projects</button>
+                  <button id="clearProjectsBtn" type="button" class="pm-danger">Clear All Projects</button>
+                </div>
+              </form>
+            </section>
 
-      <section class="pm-panel pm-metrics-panel">
-        <h2>Project Snapshot</h2>
-        <div class="pm-metric-grid">
-          <article><span id="metricTotalProjects">0</span><small>Total Projects</small></article>
-          <article><span id="metricActiveProjects">0</span><small>Active</small></article>
-          <article><span id="metricBlockedProjects">0</span><small>Blocked</small></article>
-          <article><span id="metricCompletedProjects">0</span><small>Completed</small></article>
-          <article><span id="metricOverdueProjects">0</span><small>Overdue</small></article>
-          <article><span id="metricOpenTasks">0</span><small>Open Tasks</small></article>
+            <section class="pm-subpanel">
+              <h3>Project Snapshot</h3>
+              <div class="pm-metric-grid">
+                <article><span id="metricTotalProjects">0</span><small>Total Projects</small></article>
+                <article><span id="metricActiveProjects">0</span><small>Active</small></article>
+                <article><span id="metricBlockedProjects">0</span><small>Blocked</small></article>
+                <article><span id="metricCompletedProjects">0</span><small>Completed</small></article>
+                <article><span id="metricOverdueProjects">0</span><small>Overdue</small></article>
+                <article><span id="metricOpenTasks">0</span><small>Open Tasks</small></article>
+              </div>
+            </section>
+          </div>
         </div>
       </section>
 
       <section class="pm-panel pm-sync-panel">
-        <h2>Team Sync</h2>
-        <div class="pm-sync-grid">
-          <label>
-            API URL
-            <input id="apiUrlInput" type="url" placeholder="https://your-api.onrender.com" />
-          </label>
-          <label>
-            Workspace Key
-            <input id="workspaceKeyInput" type="text" placeholder="allconvos-onboarding" />
-          </label>
-          <button id="saveSyncBtn" type="button" class="pm-ghost">Save Connection</button>
-          <button id="pullSharedBtn" type="button">Pull Shared Data</button>
-          <button id="pushSharedBtn" type="button" class="pm-ghost">Push Local Data</button>
-          <label class="pm-inline-toggle">
-            <input id="autoSyncCheckbox" type="checkbox" />
-            Auto sync (push on change + pull every 15s)
-          </label>
+        <div class="pm-panel-collapse-head">
+          <h2>Team Sync API</h2>
+          <button
+            id="pmSyncToggleBtn"
+            class="pm-panel-toggle-btn"
+            type="button"
+            aria-expanded="true"
+            aria-controls="pmSyncContent"
+          >
+            <span class="pm-panel-toggle-icon">▾</span>
+          </button>
         </div>
-        <p id="syncStatus" class="pm-sync-status">Local only. Set API URL and workspace key to share data.</p>
+        <div id="pmSyncContent" class="pm-collapsible-content">
+          <div class="pm-sync-grid">
+            <label>
+              API URL
+              <input id="apiUrlInput" type="url" placeholder="https://your-api.onrender.com" />
+            </label>
+            <label>
+              Workspace Key
+              <input id="workspaceKeyInput" type="text" placeholder="allconvos-onboarding" />
+            </label>
+            <button id="saveSyncBtn" type="button" class="pm-ghost">Save Connection</button>
+            <button id="pullSharedBtn" type="button">Pull Shared Data</button>
+            <button id="pushSharedBtn" type="button" class="pm-ghost">Push Local Data</button>
+            <label class="pm-inline-toggle">
+              <input id="autoSyncCheckbox" type="checkbox" />
+              Auto sync (push on change + pull every 15s)
+            </label>
+          </div>
+          <p id="syncStatus" class="pm-sync-status">Local only. Set API URL and workspace key to share data.</p>
+        </div>
       </section>
 
       <section class="pm-panel pm-filter-panel">
