Default all onboarding/project/sprint panels to collapsed

--- a/onboarding.html
+++ b/onboarding.html
@@ -36,13 +36,13 @@
             id="intakeMetricsToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="intakeMetricsContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="intakeMetricsContent" class="collapsible-content">
+        <div id="intakeMetricsContent" class="collapsible-content is-collapsed">
           <div class="intake-metrics-grid">
             <section class="sub-panel">
               <h3>Add New Client</h3>
@@ -122,13 +122,13 @@
             id="teamSyncToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="teamSyncContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="teamSyncContent" class="collapsible-content">
+        <div id="teamSyncContent" class="collapsible-content is-collapsed">
           <div class="sync-grid">
             <label>
               API URL
@@ -157,13 +157,13 @@
             id="filtersToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="filtersContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="filtersContent" class="collapsible-content">
+        <div id="filtersContent" class="collapsible-content is-collapsed">
           <div class="filters">
             <label>
               Search
@@ -227,13 +227,13 @@
             id="onboardingBoardToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="onboardingBoardContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="onboardingBoardContent" class="collapsible-content">
+        <div id="onboardingBoardContent" class="collapsible-content is-collapsed">
           <p class="panel-note">Drag cards across columns as clients progress.</p>
           <div id="onboardingBoard" class="kanban-board"></div>
         </div>
@@ -246,13 +246,13 @@
             id="fulfillmentBoardToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="fulfillmentBoardContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="fulfillmentBoardContent" class="collapsible-content">
+        <div id="fulfillmentBoardContent" class="collapsible-content is-collapsed">
           <p class="panel-note">Track delivery progress until completion.</p>
           <div id="fulfillmentBoard" class="kanban-board"></div>
         </div>
@@ -265,13 +265,13 @@
             id="clientDetailToggleBtn"
             class="panel-toggle-btn"
             type="button"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="clientDetailContent"
           >
             <span class="panel-toggle-icon">▾</span>
           </button>
         </div>
-        <div id="clientDetailContent" class="collapsible-content">
+        <div id="clientDetailContent" class="collapsible-content is-collapsed">
           <div id="clientDetail" class="detail-empty">
             Select a client card to edit profile, tasks, notes, and stage details.
           </div>
