Add fixed owner assignment and move PM activity under tasks

--- a/project-management.html
+++ b/project-management.html
@@ -51,7 +51,10 @@
                 </label>
                 <label>
                   Owner
-                  <input name="owner" type="text" required placeholder="Jesse" />
+                  <select name="owner" required>
+                    <option value="Jesse">Jesse</option>
+                    <option value="Giles">Giles</option>
+                  </select>
                 </label>
                 <label>
                   Priority
